[tool.poetry]
name = "poseidon_panel"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
pip = "*"
setuptools = "*"
numpy = "^1.19.4"
pandas = "^1.1.4"
xarray = "^0.16.2"
netCDF4 = "^1.5.4"
datashader = "^0.11.1"
holoviews = "^1.13.5"
geoviews = "^1.8.1"
panel = "^0.10.2"
numba = "^0.52.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
